VSE Retiming tool: incorrect speed percentages #113755

Closed
opened 2023-10-16 09:02:06 +02:00 by hug-sch · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-29 20:55, hash: 90ec11b823e8
Worked: (newest version of Blender that worked as expected)

Short description of error
Setting the speed of a whole strip to a specific % cannot be accurately done with short strips (e.g. 10 frames). The resulting speed is in 'the neighbourhood' but not exact.

Adding a retiming key to a strip should normally create two substrips of each set at 100%. For short strips : 100% (left) and <100% (right).

Exact steps for others to reproduce the error
Take a short strip (e.g. 10 frames).
Set the speed to 50%. result = 45%.
45% --> 41%
200% -- > 180%
150% --> 150%

Take a short strip.
Add a single retiming key
Compare the speeds for the left and right part.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-29 20:55, hash: `90ec11b823e8` Worked: (newest version of Blender that worked as expected) **Short description of error** Setting the speed of a whole strip to a specific % cannot be accurately done with short strips (e.g. 10 frames). The resulting speed is in 'the neighbourhood' but not exact. Adding a retiming key to a strip should normally create two substrips of each set at 100%. For short strips : 100% (left) and <100% (right). **Exact steps for others to reproduce the error** Take a short strip (e.g. 10 frames). Set the speed to 50%. result = 45%. 45% --> 41% 200% -- > 180% 150% --> 150% Take a short strip. Add a single retiming key Compare the speeds for the left and right part.
hug-sch added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-16 09:02:07 +02:00
Member

cc @iss

cc @iss
Pratik Borhade added
Module
VFX & Video
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-10-17 07:41:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-10-18 01:13:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113755
No description provided.